--- a/lab02-image-classification-transfer-learning/lab02-image-classification-transfer-learning-exercise.ipynb
+++ b/lab02-image-classification-transfer-learning/lab02-image-classification-transfer-learning-exercise.ipynb
@@ -30,137 +30,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1a26d77e",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "85538052",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"cifar10_mobilenetv2\"</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1mModel: \"cifar10_mobilenetv2\"\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
-       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ augmentation (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Sequential</span>)       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)      │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ resizing_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Resizing</span>)           │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">96</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">96</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)      │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lambda_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Lambda</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">96</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">96</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)      │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ mobilenetv2_1.00_96             │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1280</span>)     │     <span style=\"color: #00af00; text-decoration-color: #00af00\">2,257,984</span> │\n",
-       "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Functional</span>)                    │                        │               │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ global_average_pooling2d_1      │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1280</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
-       "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">GlobalAveragePooling2D</span>)        │                        │               │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">10</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">12,810</span> │\n",
-       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
-       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ augmentation (\u001b[38;5;33mSequential\u001b[0m)       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m, \u001b[38;5;34m32\u001b[0m, \u001b[38;5;34m3\u001b[0m)      │             \u001b[38;5;34m0\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ resizing_1 (\u001b[38;5;33mResizing\u001b[0m)           │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m96\u001b[0m, \u001b[38;5;34m96\u001b[0m, \u001b[38;5;34m3\u001b[0m)      │             \u001b[38;5;34m0\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lambda_1 (\u001b[38;5;33mLambda\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m96\u001b[0m, \u001b[38;5;34m96\u001b[0m, \u001b[38;5;34m3\u001b[0m)      │             \u001b[38;5;34m0\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ mobilenetv2_1.00_96             │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m, \u001b[38;5;34m3\u001b[0m, \u001b[38;5;34m1280\u001b[0m)     │     \u001b[38;5;34m2,257,984\u001b[0m │\n",
-       "│ (\u001b[38;5;33mFunctional\u001b[0m)                    │                        │               │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ global_average_pooling2d_1      │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1280\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
-       "│ (\u001b[38;5;33mGlobalAveragePooling2D\u001b[0m)        │                        │               │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m10\u001b[0m)             │        \u001b[38;5;34m12,810\u001b[0m │\n",
-       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,270,794</span> (8.66 MB)\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m2,270,794\u001b[0m (8.66 MB)\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">12,810</span> (50.04 KB)\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m12,810\u001b[0m (50.04 KB)\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,257,984</span> (8.61 MB)\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m2,257,984\u001b[0m (8.61 MB)\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Feature Extraction (Frozen Base)...\n",
-      "Epoch 1/3\n",
-      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 29ms/step - accuracy: 0.6074 - loss: 1.1581 - val_accuracy: 0.8098 - val_loss: 0.5506\n",
-      "Epoch 2/3\n",
-      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 27ms/step - accuracy: 0.7550 - loss: 0.7098 - val_accuracy: 0.8418 - val_loss: 0.4570\n",
-      "Epoch 3/3\n",
-      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 28ms/step - accuracy: 0.7657 - loss: 0.6789 - val_accuracy: 0.8502 - val_loss: 0.4317\n",
-      "Trainable layers in backbone: 20 / 154\n",
-      "\n",
-      "Starting Fine-Tuning...\n",
-      "Epoch 1/3\n",
-      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 41ms/step - accuracy: 0.6446 - loss: 1.1141 - val_accuracy: 0.8240 - val_loss: 0.5553\n",
-      "Epoch 2/3\n",
-      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 38ms/step - accuracy: 0.7458 - loss: 0.7640 - val_accuracy: 0.8432 - val_loss: 0.4887\n",
-      "Epoch 3/3\n",
-      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 38ms/step - accuracy: 0.7673 - loss: 0.6874 - val_accuracy: 0.8502 - val_loss: 0.4708\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -168,59 +42,57 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers, applications\n",
     "\n",
-    "# 1. Load CIFAR-10 \n",
+    "# 1. Load CIFAR-10 Dataset\n",
     "(x_train, y_train), (x_test, y_test) = keras.datasets.cifar10.load_data()\n",
+    "y_train, y_test = y_train.squeeze().astype(\"int64\"), y_test.squeeze().astype(\"int64\")\n",
+    "x_train, x_test = x_train.astype(\"float32\"), x_test.astype(\"float32\")\n",
     "\n",
-    "# Labels and types \n",
-    "y_train = y_train.squeeze().astype(\"int64\")\n",
-    "y_test  = y_test.squeeze().astype(\"int64\")\n",
-    "x_train = x_train.astype(\"float32\")\n",
-    "x_test  = x_test.astype(\"float32\")\n",
-    "\n",
-    "# 2.  Data Augmentation \n",
+    "# 2. Data Augmentation (Identical to ResNet reference)\n",
     "data_augmentation = keras.Sequential([\n",
     "    layers.RandomFlip(\"horizontal\"),\n",
-    "    layers.RandomRotation(0.1),\n",
+    "    layers.RandomRotation(0.05),\n",
     "    layers.RandomZoom(0.1),\n",
-    "    layers.RandomContrast(0.1), \n",
     "], name=\"augmentation\")\n",
     "\n",
-    "# 3. Load MobileNetV2 with HIGHER Resolution\n",
+    "# 3. Build MobileNetV2 Backbone\n",
     "mobilenet_base = applications.MobileNetV2(\n",
-    "    include_top=False,\n",
-    "    weights=\"imagenet\",\n",
-    "    input_shape=(128, 128, 3) \n",
+    "    weights='imagenet', \n",
+    "    include_top=False, \n",
+    "    input_shape=(224, 224, 3)\n",
     ")\n",
-    "mobilenet_base.trainable = False  # Initial frozen state for feature extraction\n",
+    "mobilenet_base.trainable = False  # Initially frozen\n",
     "\n",
-    "# 4. Build Model (Integrating Resizing and Preprocessing)\n",
+    "# 4. Full Model Construction\n",
     "model = keras.Sequential([\n",
     "    layers.Input(shape=(32, 32, 3)),\n",
     "    data_augmentation,\n",
-    "    layers.Resizing(128, 128, interpolation=\"bilinear\"), \n",
-    "    layers.Lambda(applications.mobilenet_v2.preprocess_input), \n",
+    "    layers.Resizing(224, 224, interpolation=\"bilinear\"),\n",
+    "    layers.Lambda(applications.mobilenet_v2.preprocess_input),\n",
     "    mobilenet_base,\n",
     "    layers.GlobalAveragePooling2D(),\n",
-    "    layers.Dense(256, activation='relu'), \n",
-    "    layers.Dropout(0.4), \n",
     "    layers.Dense(10)\n",
-    "], name=\"cifar10_mobilenetv2_updated\")\n",
+    "], name=\"cifar10_mobilenetv2_comparison\")\n",
     "\n",
-    "# 5. Phase 1: Feature Extraction\n",
+    "# --- ARCHITECTURE INSPECTION (Requirement 2) ---\n",
+    "print(\"--- Architecture Observation ---\")\n",
+    "print(f\"Total layers in backbone (Network Depth): {len(mobilenet_base.layers)}\")\n",
+    "model.summary() # Displays Number of parameters and Trainable vs Frozen layers\n",
+    "# -----------------------------------------------\n",
+    "\n",
+    "# 5. Phase 1: Feature Extraction (Frozen Backbone)\n",
     "model.compile(\n",
     "    optimizer=keras.optimizers.Adam(learning_rate=1e-3),\n",
     "    loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "    metrics=[\"accuracy\"]\n",
     ")\n",
     "\n",
-    "# Using more epochs for the initial head training\n",
-    "history = model.fit(x_train, y_train, epochs=10, validation_split=0.1, batch_size=64)\n",
+    "print(\"\\nStarting Phase 1: Feature Extraction...\")\n",
+    "model.fit(x_train, y_train, epochs=3, batch_size=64, validation_split=0.1)\n",
     "\n",
-    "# 6. Phase 2: DEEPER Fine-Tuning\n",
+    "# 6. Phase 2: Fine-Tuning (Unfreezing top layers)\n",
     "mobilenet_base.trainable = True\n",
-    "for layer in mobilenet_base.layers[:-50]:\n",
+    "for layer in mobilenet_base.layers[:-30]: # Unfreeze last 30 layers like ResNet lab\n",
     "    layer.trainable = False\n",
-    "\n",
     "\n",
     "model.compile(\n",
     "    optimizer=keras.optimizers.Adam(learning_rate=1e-5),\n",
@@ -228,8 +100,14 @@
     "    metrics=[\"accuracy\"]\n",
     ")\n",
     "\n",
-    "# Fine-tuning\n",
-    "history_ft = model.fit(x_train, y_train, epochs=10, validation_split=0.1, batch_size=64)"
+    "print(\"\\nStarting Phase 2: Fine-Tuning...\")\n",
+    "model.fit(x_train, y_train, epochs=3, batch_size=64, validation_split=0.1)\n",
+    "\n",
+    "# --- FINAL EVALUATION (Requirement 3) ---\n",
+    "print(\"\\n--- Final Model Evaluation ---\")\n",
+    "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=1)\n",
+    "print(f\"MobileNetV2 Final Test Accuracy: {test_acc:.4f}\")\n",
+    "print(f\"MobileNetV2 Final Test Loss: {test_loss:.4f}\")"
    ]
   },
   {
@@ -237,20 +115,11 @@
    "execution_count": 3,
    "id": "74f8bd49",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "MobileNetV2 (fine-tuned) test accuracy: 0.8381999731063843\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluation\n",
     "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=0)\n",
-    "print(f\"\\nUpdated MobileNetV2 Test Accuracy: {test_acc:.4f}\")"
+    "print(f\"\\n MobileNetV2 Test Accuracy: {test_acc:.4f}\")"
    ]
   }
  ],
