--- a/lab02-image-classification-transfer-learning/lab02-image-classification-transfer-learning-exercise.ipynb
+++ b/lab02-image-classification-transfer-learning/lab02-image-classification-transfer-learning-exercise.ipynb
@@ -31,10 +31,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "85538052",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Architecture Observation ---\n",
+      "Total layers in backbone (Network Depth): 154\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"cifar10_mobilenetv2_comparison\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1mModel: \"cifar10_mobilenetv2_comparison\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ augmentation (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Sequential</span>)       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)      │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ resizing_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Resizing</span>)           │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)    │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ lambda_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Lambda</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)    │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ mobilenetv2_1.00_224            │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">7</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">7</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1280</span>)     │     <span style=\"color: #00af00; text-decoration-color: #00af00\">2,257,984</span> │\n",
+       "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Functional</span>)                    │                        │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ global_average_pooling2d_1      │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1280</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">GlobalAveragePooling2D</span>)        │                        │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">10</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">12,810</span> │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ augmentation (\u001b[38;5;33mSequential\u001b[0m)       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m, \u001b[38;5;34m32\u001b[0m, \u001b[38;5;34m3\u001b[0m)      │             \u001b[38;5;34m0\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ resizing_1 (\u001b[38;5;33mResizing\u001b[0m)           │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m3\u001b[0m)    │             \u001b[38;5;34m0\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ lambda_1 (\u001b[38;5;33mLambda\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m3\u001b[0m)    │             \u001b[38;5;34m0\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ mobilenetv2_1.00_224            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m7\u001b[0m, \u001b[38;5;34m7\u001b[0m, \u001b[38;5;34m1280\u001b[0m)     │     \u001b[38;5;34m2,257,984\u001b[0m │\n",
+       "│ (\u001b[38;5;33mFunctional\u001b[0m)                    │                        │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ global_average_pooling2d_1      │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1280\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ (\u001b[38;5;33mGlobalAveragePooling2D\u001b[0m)        │                        │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m10\u001b[0m)             │        \u001b[38;5;34m12,810\u001b[0m │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,270,794</span> (8.66 MB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m2,270,794\u001b[0m (8.66 MB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">12,810</span> (50.04 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m12,810\u001b[0m (50.04 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,257,984</span> (8.61 MB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m2,257,984\u001b[0m (8.61 MB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Starting Phase 1: Feature Extraction...\n",
+      "Epoch 1/3\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m81s\u001b[0m 107ms/step - accuracy: 0.5894 - loss: 1.1805 - val_accuracy: 0.7968 - val_loss: 0.5878\n",
+      "Epoch 2/3\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m75s\u001b[0m 107ms/step - accuracy: 0.7377 - loss: 0.7491 - val_accuracy: 0.8356 - val_loss: 0.4862\n",
+      "Epoch 3/3\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m76s\u001b[0m 108ms/step - accuracy: 0.7576 - loss: 0.6972 - val_accuracy: 0.8260 - val_loss: 0.5079\n",
+      "\n",
+      "Starting Phase 2: Fine-Tuning...\n",
+      "Epoch 1/3\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m109s\u001b[0m 142ms/step - accuracy: 0.6763 - loss: 0.9334 - val_accuracy: 0.8202 - val_loss: 0.5330\n",
+      "Epoch 2/3\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m99s\u001b[0m 140ms/step - accuracy: 0.7704 - loss: 0.6615 - val_accuracy: 0.8368 - val_loss: 0.4694\n",
+      "Epoch 3/3\n",
+      "\u001b[1m704/704\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 142ms/step - accuracy: 0.7960 - loss: 0.5863 - val_accuracy: 0.8486 - val_loss: 0.4263\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x7a876f5a54f0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,19 +180,19 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers, applications\n",
     "\n",
-    "# 1. Load CIFAR-10 Dataset\n",
+    "# Load CIFAR-10 Dataset\n",
     "(x_train, y_train), (x_test, y_test) = keras.datasets.cifar10.load_data()\n",
     "y_train, y_test = y_train.squeeze().astype(\"int64\"), y_test.squeeze().astype(\"int64\")\n",
     "x_train, x_test = x_train.astype(\"float32\"), x_test.astype(\"float32\")\n",
     "\n",
-    "# 2. Data Augmentation (Identical to ResNet reference)\n",
+    "#  Data Augmentation \n",
     "data_augmentation = keras.Sequential([\n",
     "    layers.RandomFlip(\"horizontal\"),\n",
     "    layers.RandomRotation(0.05),\n",
     "    layers.RandomZoom(0.1),\n",
     "], name=\"augmentation\")\n",
     "\n",
-    "# 3. Build MobileNetV2 Backbone\n",
+    "#  Build MobileNetV2 Backbone\n",
     "mobilenet_base = applications.MobileNetV2(\n",
     "    weights='imagenet', \n",
     "    include_top=False, \n",
@@ -62,7 +200,7 @@
     ")\n",
     "mobilenet_base.trainable = False  # Initially frozen\n",
     "\n",
-    "# 4. Full Model Construction\n",
+    "# Full Model Construction\n",
     "model = keras.Sequential([\n",
     "    layers.Input(shape=(32, 32, 3)),\n",
     "    data_augmentation,\n",
@@ -73,13 +211,13 @@
     "    layers.Dense(10)\n",
     "], name=\"cifar10_mobilenetv2_comparison\")\n",
     "\n",
-    "# --- ARCHITECTURE INSPECTION (Requirement 2) ---\n",
+    "# ARCHITECTURE INSPECTION \n",
     "print(\"--- Architecture Observation ---\")\n",
     "print(f\"Total layers in backbone (Network Depth): {len(mobilenet_base.layers)}\")\n",
-    "model.summary() # Displays Number of parameters and Trainable vs Frozen layers\n",
-    "# -----------------------------------------------\n",
+    "model.summary() \n",
     "\n",
-    "# 5. Phase 1: Feature Extraction (Frozen Backbone)\n",
+    "\n",
+    "#  Phase 1: Feature Extraction (Frozen Backbone)\n",
     "model.compile(\n",
     "    optimizer=keras.optimizers.Adam(learning_rate=1e-3),\n",
     "    loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
@@ -89,9 +227,9 @@
     "print(\"\\nStarting Phase 1: Feature Extraction...\")\n",
     "model.fit(x_train, y_train, epochs=3, batch_size=64, validation_split=0.1)\n",
     "\n",
-    "# 6. Phase 2: Fine-Tuning (Unfreezing top layers)\n",
+    "#  Phase 2: Fine-Tuning (Unfreezing top layers)\n",
     "mobilenet_base.trainable = True\n",
-    "for layer in mobilenet_base.layers[:-30]: # Unfreeze last 30 layers like ResNet lab\n",
+    "for layer in mobilenet_base.layers[:-30]: \n",
     "    layer.trainable = False\n",
     "\n",
     "model.compile(\n",
@@ -101,9 +239,29 @@
     ")\n",
     "\n",
     "print(\"\\nStarting Phase 2: Fine-Tuning...\")\n",
-    "model.fit(x_train, y_train, epochs=3, batch_size=64, validation_split=0.1)\n",
-    "\n",
-    "# --- FINAL EVALUATION (Requirement 3) ---\n",
+    "model.fit(x_train, y_train, epochs=3, batch_size=64, validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "74f8bd49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Final Model Evaluation ---\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 51ms/step - accuracy: 0.8412 - loss: 0.4535\n",
+      "MobileNetV2 Final Test Accuracy: 0.8460\n",
+      "MobileNetV2 Final Test Loss: 0.4455\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FINAL EVALUATION \n",
     "print(\"\\n--- Final Model Evaluation ---\")\n",
     "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=1)\n",
     "print(f\"MobileNetV2 Final Test Accuracy: {test_acc:.4f}\")\n",
@@ -111,15 +269,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "74f8bd49",
+   "cell_type": "markdown",
+   "id": "69df8539",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Evaluation\n",
-    "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=0)\n",
-    "print(f\"\\n MobileNetV2 Test Accuracy: {test_acc:.4f}\")"
+    "### Questions:\n",
+    "\n",
+    "- **Which model achieved the highest accuracy?**\n",
+    "\n",
+    "ResNet50V2 achieved the highest accuracy among the three models.\n",
+    "\n",
+    "-**Which model trained faster?**\n",
+    "\n",
+    "The Custom CNN was the fastest to train, but between the two large pre-trained models, MobileNetV2 was significantly faster than ResNet50V2.\n",
+    "\n",
+    "- **How might the architecture explain the differences?**\n",
+    "\n",
+    "**ResNet50V2 (Residual Learning):** Its superior accuracy is due to Residual Blocks (skip connections). These allow the model to be much deeper (190 layers total) without the gradients vanishing.\n",
+    "\n",
+    "**MobileNetV2 (Inverted Residuals):** This model is optimized for mobile efficiency rather than maximum depth. It uses Depthwise Separable Convolutions, which perform nearly 8–9 times fewer mathematical operations ($FLOPs$) than standard convolutions. This is why it has only 2.3 million parameters compared to ResNet’s 23.5 million, explaining its faster speed despite a slight drop in accuracy.\n",
+    "\n",
+    "**Custom CNN:** This model consists of only a few basic convolutional and pooling layers. Its speed comes from this simplicity, but it lacks the pre-trained weights and architectural depth necessary to reach the high accuracy levels achieved by other pre-traind models.\n"
    ]
   }
  ],
@@ -128,6 +298,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
