--- a/lab02-image-classification-transfer-learning/lab02-image-classification-transfer-learning-exercise.ipynb
+++ b/lab02-image-classification-transfer-learning/lab02-image-classification-transfer-learning-exercise.ipynb
@@ -275,15 +275,15 @@
    "source": [
     "### Questions:\n",
     "\n",
-    "- **Which model achieved the highest accuracy?**\n",
+    "-**Which model achieved the highest accuracy?**\n",
     "\n",
-    "ResNet50V2 achieved the highest accuracy among the three models.\n",
+    "ResNet50V2 achieved the highest accuracy among the three models, the deep capacity of ResNet allowed it to capture more complex features.\n",
     "\n",
     "-**Which model trained faster?**\n",
     "\n",
     "The Custom CNN was the fastest to train, but between the two large pre-trained models, MobileNetV2 was significantly faster than ResNet50V2.\n",
     "\n",
-    "- **How might the architecture explain the differences?**\n",
+    "-**How might the architecture explain the differences?**\n",
     "\n",
     "**ResNet50V2 (Residual Learning):** Its superior accuracy is due to Residual Blocks (skip connections). These allow the model to be much deeper (190 layers total) without the gradients vanishing.\n",
     "\n",
